--- a/FDI/jQuery Function/jQuery Function/Views/Home/Index.cshtml
+++ b/FDI/jQuery Function/jQuery Function/Views/Home/Index.cshtml
@@ -8,3 +8,5 @@
 <br/><a href="@Url.Action("Index","AutoSearch")">AutoSearch</a>
 <br/><a href="@Url.Action("Datepicker","Home")">DatePicker</a>
 <br/><a href="@Url.Action("Tooltip","Home")">POPOVER BOOSTRAP TOOLTIP</a>
+<br/><a href="@Url.Action("Scroll","Home")">Scroll</a>
+<br/><a href="@Url.Action("Ajaxcomplete","Home")">Ajaxcomplete</a>
