--- a/trunk/FDI/jQuery Function/jQuery Function/Views/Home/Index.cshtml
+++ b/trunk/FDI/jQuery Function/jQuery Function/Views/Home/Index.cshtml
@@ -10,3 +10,4 @@
 <br/><a href="@Url.Action("Tooltip","Home")">POPOVER BOOSTRAP TOOLTIP</a>
 <br/><a href="@Url.Action("Scroll","Home")">Scroll</a>
 <br/><a href="@Url.Action("Ajaxcomplete","Home")">Ajaxcomplete</a>
+<br/><a href="@Url.Action("FadeOut","Home")">FadeOut:Ẩn hiệu ứng mờ dần</a>
