--- a/FDI/jQuery Function/jQuery Function/Views/Shared/_Layout.cshtml
+++ b/FDI/jQuery Function/jQuery Function/Views/Shared/_Layout.cshtml
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" />
-    <link href="~/Content/boostrap/bootstrap.css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-1.11.0.min.js"></script>
+    <link rel="stylesheet" href="../../Skin/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="../../Skin/css/animate.css" type="text/css" />
+    <link rel="stylesheet" href="../../Skin/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="../../Skin/css/font.css" type="text/css" />
+    <link rel="stylesheet" href="../../Skin/css/app.css" type="text/css" />
+    <script src="~/Content/jquery-1.8.2.min.js"></script>
 </head>
 <body>
     <div class="main">
         @RenderBody()
     </div>
+    <script src="~/Skin/js/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="~/Skin/js/bootstrap.js"></script>
+    <!-- App -->
+    <script src="~/Skin/js/app.js"></script>
+    <script src="~/Skin/js/app.plugin.js"></script>
+    <script src="~/Skin/js/slimscroll/jquery.slimscroll.min.js"></script>
 </body>
 </html>
