--- a/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Content/NguoiDung.css
+++ b/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Content/NguoiDung.css
@@ -82,3 +82,12 @@ ul.navMenu {
 #divMenuleft {
     float: left;
 }
+
+#divNhaXB {
+    float: left;
+}
+     
+#divRight {
+    float: left;
+    
+}
