--- a/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Home/Index.cshtml
+++ b/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Home/Index.cshtml
@@ -3,4 +3,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+@section noidungbenphai{
+    <div>Thật không thể tin nổi</div>
+    }
+
+SỰ RA ĐỜI CỦA MẠNG GIÁO DỤC CỘNG TÁC MOOC MYCLASS.VN ?
+
+      Xuất thân từ những Giảng viên đứng trên bục giảng chúng tôi nhận thấy rằng: với thời gian cho phép tại trường học, chúng ta không đủ thời gian cung cấp tất cả các kiến thức cho các bạn Sinh viên. Thêm vào đó, chúng ta có thể có nhiều loại Sinh viên khác nhau từ Khá, Giỏi, Trung Bình, Yếu...nếu chúng ta dạy nhanh hoặc cung cấp thêm kiến thức nâng cao cho các bạn, có thể một số bạn theo dõi kịp, một số bạn học lực Yếu sẽ không theo kịp.
+
+Trong khi đó, nhu cầu tuyển dụng của xã hội đòi hỏi các bạn cần phải tìm hiểu sâu các kiến thức liên quan đến công việc của mình. Các bạn cần có những kiến thức thực tế, phải thực hành nhiều. Hơn nữa, chúng ta chưa phát huy tích cực các hoạt động cộng đồng, tương tác, thảo luận giữa Giảng viên và các bạn Sinh viên hay giữa các Sinh viên với nhau.
+
+Xuất phát từ những nhu cầu đó, đội ngũ Giảng viên chúng tôi đã có những trăn trở và tâm huyết xây dựng một cộng đồng giáo dục Mở, xây dựng các khóa học hoàn toàn miễn phí MOOC theo hướng thực hành, nghiên cứu và áp dụng các phương pháp học tập tiên tiến để biên soạn ra các Khóa học giúp các bạn Học viên học tập dễ hiểu, dễ áp dụng, các kiến thức bám sát với nhu cầu tuyển dụng của doanh nghiệp. Đó là lý do chúng tôi tạo ra Mạng giáo dục cộng tác MyClass.vn này. MyClass.vn dựa trên nền tảng mạng xã hội để xây dựng các công cụ hỗ trợ việc dạy và học trực tuyến giúp cho việc trao đổi, thảo luận và tương tác giữa  Sinh viên và Giảng viên được tích cực hơn, sinh động hơn.
+
+CÁC KHÓA HỌC TRÊN MYCLASS.VN ?
+
+Tất cả các khóa học trên MyClass.vn đều được các giảng viên nhiệt tình đóng góp. Các khóa học được chúng tôi  cùng các giảng viên đầu tư nghiên cứu cả về nội dung giảng dạy lẫn phương pháp giảng dạy với mục tiêu giúp cho các học viên của mình dễ dàng theo dõi và thao tác để nắm bắt kiển thức và thực hành. 
