--- a/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Shared/_Layout.cshtml
+++ b/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Shared/_Layout.cshtml
@@ -89,53 +89,42 @@
         </div>
         <section>
             <div>
-                <a href="#" class="button">This is a button</a>
+                <a href="#" class="button">khoa học</a>
+                <a href="#" class="button">Tình yêu</a>
 
-                <a href="#" class="button button-submit">This is a save button</a>
+                <a href="#" class="button button-submit">Xã hội</a>
 
-                <a href="#" class="button">Button with a counter <span class="notification">22</span></a>
+                <a href="#" class="button">Nhân văn</a>
 
                 <a href="#" class="button button-and-icon">
                     <div><i class="icon-large icon-cog"></i></div>
-                    Button with an icon
+                    Xã hội
                 </a>
             </div>
-
             <hr>
-
-            <div>
-                <a href="#" class="button button-submit">Submit</a>
-                <a href="#" class="button button-cancel">Cancel</a>
-                <a href="#" class="button button-delete">Delete</a>
-            </div>
-
-            <hr>
-
-            <div>
-                <a href="#" class="button button-small">Smaller button</a>
-            </div>
-
-            <hr>
-
-            <div>
-                <a href="#" class="button button-buy">Buy button (full width for columns)</a>
-            </div>
         </section>
 
         <section class="blank items">
-            <div class="item">
-                <img src="http://lorempixel.com/400/300/" alt="Image">
-
-                <div class="item-info">
-                    <h1>Item title</h1>
-                    <p>What the hell is this? Get out of town, I didn't know you did anything creative. Ah, let me read some.</p>
-                    <span class="price">£49.99</span>
-                    <a href="#" class="button button-buy">Get it now</a>
+            <div id="divNhaXB">
+                <div class="item">
+                    <div class="item-info">
+                        <h1>Nhà xuất bản</h1>
+                        <div><a href="#">Kim đồng</a></div>
+                        <div><a href="#">Kim đồng</a></div>
+                        <div><a href="#">Kim đồng</a></div>
+                        <div><a href="#">Kim đồng</a></div>
+                    </div>
+                    <img src="http://lorempixel.com/500/250/" alt="Image">
                 </div>
             </div>
-            <div>
-                <a href="#" class="button button-buy">Buy button (full width for columns)</a>
+            <div id="divRight">
+                @RenderSection("noidungbenphai")
             </div>
+            <div>
+                <a href="#" class="button button-buy">Welcome</a>
+            </div>
+
+
         </section>
     </div>
     @* scrip chay slide *@
