--- a/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Shared/_Layout.cshtml
+++ b/trunk/FDI/QuanLyBanSach/QuanLyBanSach/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div id="divRight">
-                @RenderSection("noidungbenphai")
+                @RenderSection("noidungbenphai",false)
             </div>
             <div>
                 <a href="#" class="button button-buy">Welcome</a>
